# mokomessages

./: .gitignore  configure.ac  mokomessages_git.bb  run-messages.sh
data/: Makefile.am  mokomessages.desktop
data/themes/gry/: theme.edc
src/: Makefile.am  globals.h  main.c  msglist.c  msglist.h  threadwin.c  threadwin.h
